--- a/public/css/sign_up.css
+++ b/public/css/sign_up.css
@@ -1,4 +1,5 @@
-html .body {
+html,
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -35,15 +36,18 @@ html .body {
 }
 
 .signup-wrapper {
-    margin-top: 0px;
+    margin-top: 50px;
     display: flex;
-    width: 30%;
-    height: 50vh;
+    width: 100%;
+    max-width: 500px;
+    /* Hapus height fix dan biarkan konten mengatur tinggi */
+    min-height: 300px; /* opsional, jika kamu ingin tinggi minimum */
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
     border-radius: 20px;
+    overflow: hidden; /* ganti dari overflow-x */
+    box-sizing: border-box;
 }
 
 select {
